--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+#main
+{
+    background-color:#DC143C;
+    color:white;
+   max-width: 100%;
+ 
+}
+#mainHeader
+{
+
+    margin-left: 35%;
+    font-size: 40px;
+   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#cart
+{
+    margin-top: 2%;
+    margin-bottom: 1%;
+    margin-left:45%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#mainCard
+{
+    margin-left: 70px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#subItemCard
+{
+    margin-left: 15%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#subItemsImage
+{
+    max-height: 300px;
+    
 }
